<resources>
    <string name="app_name">GoandDo</string>
    <string name="send_feedback">Send Feedback</string>
    <string name="what_else_would_you_like_us_to_know">What else would you like us to know?</string>
    <string name="type_your_feedback_here">Type your feedback here</string>
    <string name="go_and_do">GO and DO</string>
    <string name="you_can_join">You can join already today</string>
    <string name="add_number">Add Number</string>
    <string name="adding_a_ph">Adding a phone number to your account is a great step toward a better experience.</string>
    <string name="submit">Submit</string>
    <string name="otp_verific">OTP Verification</string>
    <string name="we_sent_otp">We sent otp verification to your phone this code will expired in 01:35</string>
    <string name="sign_in">Sign In</string>
    <string name="let_s_explore_our_service">Let’s explore Our Service</string>
    <string name="sign_in_your_account">Sign In your Account</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="remember_me">Remember Me</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="or_sign_in_with_social">Or, Sign in with social</string>
    <string name="don_t_have_account">Don\'t Have Account?</string>
    <string name="sign_up">Sign up</string>
    <string name="call_a_friend">Call a Friend</string>
    <string name="hi_john_doe">Hi John Doe</string>
    <string name="call_to_operator">Call to operator</string>
    <string name="push_notifications">Push notifications</string>
    <string name="go_and_do_application_would_like_to_send_you_push_notificatons">Go and Do application would like to send you push notificatons</string>
    <string name="don_t_allow">Don’t allow</string>
    <string name="allow">Allow</string>
</resources>